--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Less Project</title>
-  <link rel="stylesheet" type="text/css" href="less/style.css">
+	<title>Less Project</title>
+	<link rel="stylesheet" type="text/css" href="less/style.css">
 </head>
 <body>
 <div id="container">
 
 <header>
- <div class="container">
+<div class="container">
 
- 
-	<h1>Writint CSS with LESS</h1>
+	<h1>Writing CSS with LESS</h1>
 
 	<nav>
 		<ul>
@@ -22,11 +21,11 @@
 		</ul>
 	</nav>
 
- </div><!-- container-->
+</div><!-- container-->
 </header>
 
 <div id="main">
-	 <div class="container">
+	<div class="container">
 
 		<aside>
 			<img src="http://placekitten.com/g/450/450" alt='placekitten placeholder'>
@@ -50,7 +49,7 @@
 
 
 <footer>
-	 <div class="container">
+	<div class="container">
 
 		<ul>
 			<li>Link</li>
